tests/ui/issues/issue-23024.stderr
error[E0658]: the precise format of `Fn`-family traits' type parameters is subject to change
  --> $DIR/issue-23024.rs:8:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ help: use parenthetical notation instead: `Fn() -> ()`
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0107]: missing generics for trait `Fn`
  --> $DIR/issue-23024.rs:8:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ expected 1 generic argument
   |
help: add missing generic argument
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn<Args>)(3));
   |                                         ++++++

error[E0191]: the value of the associated type `Output` (from trait `FnOnce`) must be specified
  --> $DIR/issue-23024.rs:8:39
   |
LL |     println!("{:?}",(vfnfer[0] as dyn Fn)(3));
   |                                       ^^ help: specify the associated type: `Fn<Output = Type>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0191, E0658.
For more information about an error, try `rustc --explain E0107`.
